--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -25,7 +25,7 @@ pt:
  activerecord:
   models:
     ajuda: Perguntas e respostas
-    artigo: Artigos
+    artigo: Notícias
     assistencia: Assistências
     categoria: Categorias
     produto: Produtos
