--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,8 +1,9 @@
 en:
+ linha: Product Lines
  suporte: Support
  atendimento: Attendance
  comercial: Commercial
- inicio: Start
+ inicio: Home
  sair: Get out
  entrar: Login
  editar: To edit
