--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@ en:
     contato: Contacts
     orcamento: Budgeting
     manutencao: Maintenance
-    quem_somo: who we are
+    quem_somo: who We Are
   attributes:
     ajuda:
      pergunta: Question
