--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@ en:
     contato: Contacts
     orcamento: Budgeting
     manutencao: Maintenance
-    quem_somo: who We Are
+    quem_somo: Who we are
   attributes:
     ajuda:
      pergunta: Question
