--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -36,7 +36,7 @@ pt:
     contato: Contatos
     orcamento: Orçamentos
     manutencao: Manutenções
-    quem_somo: Nossa Histório
+    quem_somo: Nossa histório
     anexo: Anexos
   attributes:
     ajuda:
